--- a/MetricRecommendationResource/test_generate_recommended_metric_panels.ipynb
+++ b/MetricRecommendationResource/test_generate_recommended_metric_panels.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-10-15T08:44:54.913559Z",
-     "start_time": "2024-10-15T08:44:49.986266Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import sys\n",
@@ -16,17 +12,8 @@
     "sys.path.append('D:\\PythonProjects\\\\bk-monitor\\\\venv2\\share\\scripts')\n",
     "import hello"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "当前运行环境缺少部分需要的环境变量，可能导致项目运行报错，请确认以下环境变量已经配置并赋值: BK_PAAS2_URL\n",
-      "注意，当前版本为社区版环境，请确认 BKPAAS_MAJOR_VERSION 已经配置并正确赋值\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
@@ -157,14 +144,11 @@
    "execution_count": 4
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T08:49:20.364181Z",
-     "start_time": "2024-10-15T08:49:19.605425Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
+    "# 测试使用pandas 进行过滤的数据与实际情况是否一致\n",
+    "\n",
     "pre_field_set = {\"id\",\n",
     "                 \"result_table_id\",\n",
     "                 \"data_source_label\",\n",
@@ -185,19 +169,30 @@
     "    print(result_batch[0:10], len(result_batch))\n"
    ],
    "id": "e6885ec9d23d89a0",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "量查询结果是否一致： True\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10] 2714\n",
-      "\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10] 2714\n"
-     ]
-    }
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# 断点测试generate_recommended_metric_panels 方法\n",
+    "from fta_web.alert.resources import MetricRecommendationResource\n",
+    "from bkmonitor.aiops.alert.utils import RecommendMetricManager\n",
+    "\n",
+    "\n",
+    "params = [\n",
+    "    {'data_source_label': 'bk_monitor', 'result_table_id': 'strategy', 'data_type_label': 'alert', 'bk_biz_id': 17},\n",
+    "    {'data_source_label': 'bk_monitor', 'result_table_id': 'pingserver.base', 'data_type_label': 'time_series',\n",
+    "     'bk_biz_id': 0}\n",
+    "]\n",
+    "params = iter(params)\n",
+    "\n",
+    "RecommendMetricManager(1, True).generate_recommended_metric_panels(1, {}, {})"
    ],
-   "execution_count": 11
+   "id": "a25bfc8f0cf8c61e"
   }
  ],
  "metadata": {
