--- a/MetricRecommendationResource/test_perform_request.ipynb
+++ b/MetricRecommendationResource/test_perform_request.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-10-15T08:54:26.125277Z",
-     "start_time": "2024-10-15T08:54:22.504892Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import sys\n",
@@ -16,20 +12,8 @@
     "sys.path.append('D:\\PythonProjects\\\\bk-monitor\\\\venv2\\share\\scripts')\n",
     "import hello"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "当前运行环境缺少部分需要的环境变量，可能导致项目运行报错，请确认以下环境变量已经配置并赋值: BK_PAAS2_URL\n",
-      "注意，当前版本为社区版环境，请确认 BKPAAS_MAJOR_VERSION 已经配置并正确赋值\n",
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
@@ -638,14 +622,10 @@
    "execution_count": 37
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T01:23:32.337216Z",
-     "start_time": "2024-10-15T01:23:32.254307Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
+    "# 断点测试\n",
     "from fta_web.alert.resources import MetricRecommendationResource\n",
     "\n",
     "params = {\n",
@@ -654,26 +634,11 @@
     "    \"recommendation_metric_id\": 2\n",
     "}\n",
     "\n",
-    "MetricRecommendationResource().perform_request(params)\n",
-    "\n"
+    "MetricRecommendationResource().perform_request(params)\n"
    ],
    "id": "79ada39d878b873f",
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'alert_id'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[17], line 9\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mfta_web\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01malert\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mresources\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m MetricRecommendationResource\n\u001B[0;32m      3\u001B[0m params \u001B[38;5;241m=\u001B[39m {\n\u001B[0;32m      4\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mbk_biz_id\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;241m2\u001B[39m,\n\u001B[0;32m      5\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124malert_metric_id\u001B[39m\u001B[38;5;124m\"\u001B[39m:\u001B[38;5;241m2\u001B[39m,\n\u001B[0;32m      6\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrecommendation_metric_id\u001B[39m\u001B[38;5;124m\"\u001B[39m:\u001B[38;5;241m2\u001B[39m\n\u001B[0;32m      7\u001B[0m }\n\u001B[1;32m----> 9\u001B[0m \u001B[43mMetricRecommendationResource\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mperform_request\u001B[49m\u001B[43m(\u001B[49m\u001B[43mparams\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mD:\\PythonProjects\\bk-monitor\\bkmonitor\\packages\\fta_web\\alert\\resources.py:2205\u001B[0m, in \u001B[0;36mMetricRecommendationResource.perform_request\u001B[1;34m(self, validated_request_data)\u001B[0m\n\u001B[0;32m   2204\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mperform_request\u001B[39m(\u001B[38;5;28mself\u001B[39m, validated_request_data):\n\u001B[1;32m-> 2205\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43msuper\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mMetricRecommendationResource\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mperform_request\u001B[49m\u001B[43m(\u001B[49m\u001B[43mvalidated_request_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   2207\u001B[0m     \u001B[38;5;66;03m# 参数列表,每个列表同位置的元素一一对应，共同组成一对查询参数\u001B[39;00m\n\u001B[0;32m   2208\u001B[0m     alert_metric_ids \u001B[38;5;241m=\u001B[39m []\n",
-      "File \u001B[1;32mD:\\PythonProjects\\bk-monitor\\bkmonitor\\packages\\fta_web\\alert\\resources.py:2136\u001B[0m, in \u001B[0;36mAIOpsBaseResource.perform_request\u001B[1;34m(self, validated_request_data)\u001B[0m\n\u001B[0;32m   2135\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mperform_request\u001B[39m(\u001B[38;5;28mself\u001B[39m, validated_request_data):\n\u001B[1;32m-> 2136\u001B[0m     alert \u001B[38;5;241m=\u001B[39m AlertDocument\u001B[38;5;241m.\u001B[39mget(\u001B[43mvalidated_request_data\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43malert_id\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m)\n\u001B[0;32m   2137\u001B[0m     cache_result \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_cache_results(alert\u001B[38;5;241m.\u001B[39mid)\n\u001B[0;32m   2139\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m cache_result \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcache_valid(alert, cache_result):\n",
-      "\u001B[1;31mKeyError\u001B[0m: 'alert_id'"
-     ]
-    }
-   ],
-   "execution_count": 17
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
