--- a/MetricRecommendationResource/test_generate_recommended_metric_panels.ipynb
+++ b/MetricRecommendationResource/test_generate_recommended_metric_panels.ipynb
@@ -18,8 +18,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T08:44:54.928429Z",
-     "start_time": "2024-10-15T08:44:54.915397Z"
+     "end_time": "2024-10-15T09:40:55.964960Z",
+     "start_time": "2024-10-15T09:40:55.946128Z"
     }
    },
    "cell_type": "code",
@@ -40,13 +40,13 @@
    ],
    "id": "3b9c363dc24523fc",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T08:44:54.944424Z",
-     "start_time": "2024-10-15T08:44:54.930427Z"
+     "end_time": "2024-10-15T09:36:57.311858Z",
+     "start_time": "2024-10-15T09:36:57.296482Z"
     }
    },
    "cell_type": "code",
@@ -58,7 +58,6 @@
     "            query_set = MetricListCache.objects.filter(**metric_info).order_by(\"id\").values(*pre_field_set)\n",
     "            for item in query_set:\n",
     "                result.append(item)\n",
-    "    result.sort()\n",
     "    return result\n",
     "\n",
     "# query_metric_cache_loop()\n",
@@ -67,13 +66,13 @@
    ],
    "id": "e3cf7415a647a18b",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T08:44:55.022541Z",
-     "start_time": "2024-10-15T08:44:54.945395Z"
+     "end_time": "2024-10-15T09:41:35.690630Z",
+     "start_time": "2024-10-15T09:41:35.674632Z"
     }
    },
    "cell_type": "code",
@@ -88,6 +87,7 @@
     "def query_metric_cache_batch(pre_field_set):\n",
     "    # 过滤条件字典\n",
     "    filter_conditions = defaultdict(list)\n",
+    "\n",
     "    metric_info_recommends = []\n",
     "\n",
     "    field_set = pre_field_set.copy()\n",
@@ -134,17 +134,21 @@
     "            index = count()\n",
     "        result.extend(current_res)\n",
     "\n",
-    "    result.sort()\n",
     "    return result\n",
     "\n",
     "# query_metric_cache_batch(pre_field_set)\n"
    ],
    "id": "e159af8162de629",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 21
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T09:41:38.664766Z",
+     "start_time": "2024-10-15T09:41:37.921235Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# 测试使用pandas 进行过滤的数据与实际情况是否一致\n",
@@ -169,19 +173,32 @@
     "    print(result_batch[0:10], len(result_batch))\n"
    ],
    "id": "e6885ec9d23d89a0",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "量查询结果是否一致： True\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10] 2714\n",
+      "\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10] 2714\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T09:30:06.848018Z",
+     "start_time": "2024-10-15T09:30:06.848018Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# 断点测试generate_recommended_metric_panels 方法\n",
     "from fta_web.alert.resources import MetricRecommendationResource\n",
     "from bkmonitor.aiops.alert.utils import RecommendMetricManager\n",
-    "\n",
     "\n",
     "params = [\n",
     "    {'data_source_label': 'bk_monitor', 'result_table_id': 'strategy', 'data_type_label': 'alert', 'bk_biz_id': 17},\n",
@@ -192,7 +209,9 @@
     "\n",
     "RecommendMetricManager(1, True).generate_recommended_metric_panels(1, {}, {})"
    ],
-   "id": "a25bfc8f0cf8c61e"
+   "id": "a25bfc8f0cf8c61e",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
