fix:generate_recommended_metric_panels 修改过滤条件&取消pandas的使用

--- a/MetricRecommendationResource/test_generate_recommended_metric_panels.ipynb
+++ b/MetricRecommendationResource/test_generate_recommended_metric_panels.ipynb
@@ -18,8 +18,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T09:40:55.964960Z",
-     "start_time": "2024-10-15T09:40:55.946128Z"
+     "end_time": "2024-10-16T07:50:09.128910Z",
+     "start_time": "2024-10-16T07:50:09.115882Z"
     }
    },
    "cell_type": "code",
@@ -27,28 +27,30 @@
     "from bkmonitor.models.metric_list_cache import MetricListCache\n",
     "\n",
     "groups = [\n",
-    "    # {\"data_source_label\", \"result_table_id\"},\n",
-    "    # {\"data_source_label\", \"result_table_id\", \"bk_biz_id\"},\n",
+    "    {\"data_source_label\", \"result_table_id\"},\n",
+    "    {\"data_source_label\", \"result_table_id\", \"bk_biz_id\"},\n",
     "    {\"data_source_label\", \"result_table_id\", \"bk_biz_id\", \"data_type_label\"},\n",
+    "    {\"data_source_label\", \"result_table_id\", \"data_type_label\"},\n",
     "]\n",
     "# 用于保存需要查询的参数\n",
     "param_dics_list = []\n",
     "\n",
     "for item in groups:\n",
-    "    result = MetricListCache.objects.all().values(*item).distinct()[0:10000]\n",
+    "    result = MetricListCache.objects.all().values(*item).distinct()[0:10]\n",
     "    param_dics_list.append(list(result))"
    ],
    "id": "3b9c363dc24523fc",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 97
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T09:36:57.311858Z",
-     "start_time": "2024-10-15T09:36:57.296482Z"
-    }
-   },
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "2dd754910c29e21b"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def query_metric_cache_loop(pre_field_set):\n",
@@ -57,96 +59,110 @@
     "        for metric_info in param_dics:\n",
     "            query_set = MetricListCache.objects.filter(**metric_info).order_by(\"id\").values(*pre_field_set)\n",
     "            for item in query_set:\n",
-    "                result.append(item)\n",
+    "                result.append(tuple(item[field] for field in pre_field_set))\n",
+    "    result.sort()\n",
     "    return result\n",
     "\n",
-    "# query_metric_cache_loop()\n",
+    "# pre_field_set = {\"id\",\n",
+    "#                  \"result_table_id\",\n",
+    "#                  \"data_source_label\",\n",
+    "#                  \"metric_field\",\n",
+    "#                  }\n",
+    "# \n",
+    "# query_metric_cache_loop(pre_field_set)\n",
     "\n",
     "\n"
    ],
    "id": "e3cf7415a647a18b",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T09:41:35.690630Z",
-     "start_time": "2024-10-15T09:41:35.674632Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from functools import reduce\n",
     "from itertools import count\n",
-    "from box import Box\n",
-    "from pandas import DataFrame\n",
     "from collections import defaultdict\n",
+    "import operator\n",
+    "from django.db.models import Q as DQ\n",
     "\n",
     "\n",
     "def query_metric_cache_batch(pre_field_set):\n",
-    "    # 过滤条件字典\n",
-    "    filter_conditions = defaultdict(list)\n",
-    "\n",
-    "    metric_info_recommends = []\n",
+    "    # 字段与目标值的映射\n",
+    "    field_values_map = defaultdict(list)\n",
+    "    # 过滤条件分组字典，过滤字段相同的为一个组\n",
+    "    filter_conditions_group = defaultdict(list)\n",
     "\n",
     "    field_set = pre_field_set.copy()\n",
     "\n",
     "    for param_dics in param_dics_list:\n",
     "        for metric_info in param_dics:\n",
     "            for key, value in metric_info.items():\n",
-    "                filter_conditions[key + \"__in\"].append(value)\n",
+    "                field_values_map[key].append(value)\n",
     "\n",
-    "            metric_info_recommends.append(metric_info)\n",
+    "            # 对过滤字段进行分组，并保存与当前metric_info相关的信息\n",
+    "            filter_conditions_group[tuple(sorted(metric_info.keys()))].append((metric_info))\n",
     "            # 更新查询需要显示的字段集合\n",
     "            field_set.update(set(metric_info.keys()))\n",
     "\n",
+    "    # 生成过滤条件\n",
+    "    filter_conditions = reduce(operator.or_, [DQ(**{key + \"__in\": field_values_map[key] for key in key_tuple})\n",
+    "                                              for key_tuple in filter_conditions_group.keys()])\n",
+    "    # print(filter_conditions)\n",
     "    # 批量获取所有需要查询的指标\n",
-    "    metric_data = MetricListCache.objects.filter(**filter_conditions).order_by(\"id\").values(*field_set)\n",
-    "\n",
-    "    df = DataFrame(metric_data)\n",
-    "\n",
+    "    metric_data_set = MetricListCache.objects.filter(filter_conditions).order_by(\"id\").values(*field_set)\n",
+    "    # print(\"批量查询，数据量：\" + str(len(metric_data_set)))\n",
     "    result = []\n",
     "\n",
-    "    def generate_conditions(x, y):\n",
-    "        \"\"\"\n",
-    "        用于构建符合DataFrame所要求格式的过滤条件\n",
-    "        \"\"\"\n",
-    "        if not isinstance(x, tuple):\n",
-    "            return x & (df[str(y[0])] == y[1])\n",
-    "        return (df[str(x[0])] == x[1]) & (df[str(y[0])] == y[1])\n",
+    "    # print(filter_conditions_group)\n",
     "\n",
-    "    for metric_info in metric_info_recommends:\n",
-    "        condition = reduce(generate_conditions, metric_info.items())\n",
-    "        metric = df[condition].to_dict()\n",
-    "        if not metric.get(\"id\"):\n",
-    "            # 没有获取到目标数据，跳过\n",
-    "            continue\n",
+    "    for key_tuple, met_info_recommends in filter_conditions_group.items():\n",
+    "        # old = len(result)\n",
+    "        metric_dic = defaultdict(list)\n",
     "\n",
-    "        # 获取到一个随机的key\n",
-    "        random_key = list(metric.keys())[0]\n",
-    "        # 事先创建好一个元素为空字典的列表\n",
-    "        current_res = [{} for _ in range(len(metric.get(random_key)))]\n",
-    "        index = count()\n",
-    "        for key, value_dic in metric.items():\n",
-    "            for item in value_dic.values():\n",
-    "                current_res[next(index)][key] = item\n",
-    "            index = count()\n",
-    "        result.extend(current_res)\n",
+    "        # 根据key_tuple组成新的key，用于查询\n",
+    "        for data in metric_data_set:\n",
+    "            metric_dic[tuple(data[key] for key in key_tuple)].append(data)\n",
+    "\n",
+    "        length = 0\n",
+    "        for item in metric_dic.values():\n",
+    "            length += len(item)\n",
+    "\n",
+    "        # print(len(result), \"当前数据量：\", length)\n",
+    "        # k = count()\n",
+    "        for metric_info in met_info_recommends:\n",
+    "            metric_data = metric_dic.get(tuple(metric_info[key] for key in key_tuple))\n",
+    "\n",
+    "            if not metric_data:\n",
+    "                # 没有获取到目标数据，跳过\n",
+    "                continue\n",
+    "            for item in metric_data:\n",
+    "                # next(k)\n",
+    "                metric = MetricListCache(**item)\n",
+    "                result.append(tuple(getattr(metric, field) for field in pre_field_set))\n",
+    "        # print(len(result) - old, key_tuple, next(k))\n",
+    "\n",
+    "    result.sort()\n",
     "\n",
     "    return result\n",
     "\n",
+    "# pre_field_set = {\"id\",\n",
+    "#                  \"result_table_id\",\n",
+    "#                  \"data_source_label\",\n",
+    "#                  \"metric_field\",\n",
+    "#                  }\n",
     "# query_metric_cache_batch(pre_field_set)\n"
    ],
    "id": "e159af8162de629",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T09:41:38.664766Z",
-     "start_time": "2024-10-15T09:41:37.921235Z"
+     "end_time": "2024-10-16T08:55:47.945888Z",
+     "start_time": "2024-10-16T08:55:47.850888Z"
     }
    },
    "cell_type": "code",
@@ -162,15 +178,12 @@
     "if __name__ == '__main__':\n",
     "    # 循环获取并过滤数据    \n",
     "    result_loop = query_metric_cache_loop(pre_field_set)\n",
-    "    # 只保存id\n",
-    "    result_loop = list(map(lambda x: x[\"id\"], result_loop))\n",
     "    # 批量获取数据，并使用pandas 进行过滤\n",
     "    result_batch = query_metric_cache_batch(pre_field_set)\n",
-    "    result_batch = list(map(lambda x: x[\"id\"], result_batch))\n",
-    "    print(\"量查询结果是否一致：\", result_loop == result_batch)\n",
+    "    print(\"两查询结果是否一致：\", result_loop == result_batch)\n",
     "    print(result_loop[0:10], len(result_loop))\n",
     "    print()\n",
-    "    print(result_batch[0:10], len(result_batch))\n"
+    "    print(result_batch[0:20], len(result_batch))\n"
    ],
    "id": "e6885ec9d23d89a0",
    "outputs": [
@@ -178,22 +191,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "908\n",
       "量查询结果是否一致： True\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10] 2714\n",
+      "[('124', 44387001, 'bk_monitor', 'strategy'), ('124', 44387001, 'bk_monitor', 'strategy'), ('125', 44387002, 'bk_monitor', 'strategy'), ('125', 44387002, 'bk_monitor', 'strategy'), ('128', 44387003, 'bk_monitor', 'strategy'), ('128', 44387003, 'bk_monitor', 'strategy'), ('129', 44387004, 'bk_monitor', 'strategy'), ('129', 44387004, 'bk_monitor', 'strategy'), ('135', 85, 'bk_monitor', 'strategy'), ('135', 85, 'bk_monitor', 'strategy')] 908\n",
       "\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10] 2714\n"
+      "[('124', 44387001, 'bk_monitor', 'strategy'), ('124', 44387001, 'bk_monitor', 'strategy'), ('125', 44387002, 'bk_monitor', 'strategy'), ('125', 44387002, 'bk_monitor', 'strategy'), ('128', 44387003, 'bk_monitor', 'strategy'), ('128', 44387003, 'bk_monitor', 'strategy'), ('129', 44387004, 'bk_monitor', 'strategy'), ('129', 44387004, 'bk_monitor', 'strategy'), ('135', 85, 'bk_monitor', 'strategy'), ('135', 85, 'bk_monitor', 'strategy'), ('135', 85, 'bk_monitor', 'strategy'), ('135', 85, 'bk_monitor', 'strategy'), ('136', 44387005, 'bk_monitor', 'strategy'), ('136', 44387005, 'bk_monitor', 'strategy'), ('137', 44387006, 'bk_monitor', 'strategy'), ('137', 44387006, 'bk_monitor', 'strategy'), ('141', 44387007, 'bk_monitor', 'strategy'), ('141', 44387007, 'bk_monitor', 'strategy'), ('142', 44387008, 'bk_monitor', 'strategy'), ('142', 44387008, 'bk_monitor', 'strategy')] 908\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 142
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T09:30:06.848018Z",
-     "start_time": "2024-10-15T09:30:06.848018Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# 断点测试generate_recommended_metric_panels 方法\n",
@@ -202,8 +211,7 @@
     "\n",
     "params = [\n",
     "    {'data_source_label': 'bk_monitor', 'result_table_id': 'strategy', 'data_type_label': 'alert', 'bk_biz_id': 17},\n",
-    "    {'data_source_label': 'bk_monitor', 'result_table_id': 'pingserver.base', 'data_type_label': 'time_series',\n",
-    "     'bk_biz_id': 0}\n",
+    "    {'data_source_label': 'bk_monitor', 'data_type_label': 'time_series'}\n",
     "]\n",
     "params = iter(params)\n",
     "\n",
