fix:修复事件中心查询报错

--- a/MetricRecommendationResource/test_perform_request.ipynb
+++ b/MetricRecommendationResource/test_perform_request.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-10-17T06:36:41.132347Z",
+     "start_time": "2024-10-17T06:36:35.468576Z"
+    }
    },
    "source": [
     "import sys\n",
@@ -12,14 +16,23 @@
     "sys.path.append('D:\\PythonProjects\\\\bk-monitor\\\\venv2\\share\\scripts')\n",
     "import hello"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "当前运行环境缺少部分需要的环境变量，可能导致项目运行报错，请确认以下环境变量已经配置并赋值: BK_PAAS2_URL\n",
+      "注意，当前版本为社区版环境，请确认 BKPAAS_MAJOR_VERSION 已经配置并正确赋值\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T06:59:16.740291Z",
-     "start_time": "2024-10-15T06:59:16.712254Z"
+     "end_time": "2024-10-17T06:36:41.180257Z",
+     "start_time": "2024-10-17T06:36:41.134242Z"
     }
    },
    "cell_type": "code",
@@ -44,6 +57,12 @@
     "    bk_biz_ids.append(ietm[2])\n",
     "    usernames.append(ietm[3])\n",
     "\n",
+    "\n",
+    "alert_metric_ids=tuple(alert_metric_ids)\n",
+    "rec_metric_hashs=tuple(rec_metric_hashs)\n",
+    "bk_biz_ids=tuple(bk_biz_ids)\n",
+    "usernames=tuple(usernames)\n",
+    "\n",
     "#{'alert_metric_id': 'metric_0', 'recommendation_metric_hash': 'metric_hash_0', 'bk_biz_id': 1, 'count': 10}\n"
    ],
    "id": "47abc07ef759e63d",
@@ -53,8 +72,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T06:59:42.366398Z",
-     "start_time": "2024-10-15T06:59:42.270291Z"
+     "end_time": "2024-10-17T06:36:41.274404Z",
+     "start_time": "2024-10-17T06:36:41.182229Z"
     }
    },
    "cell_type": "code",
@@ -106,13 +125,13 @@
    ],
    "id": "9f2bc40bce1da31",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T07:00:41.803081Z",
-     "start_time": "2024-10-15T07:00:41.554521Z"
+     "end_time": "2024-10-17T06:36:41.526331Z",
+     "start_time": "2024-10-17T06:36:41.279468Z"
     }
    },
    "cell_type": "code",
@@ -170,13 +189,13 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T07:00:59.093290Z",
-     "start_time": "2024-10-15T07:00:59.077258Z"
+     "end_time": "2024-10-17T06:36:41.542343Z",
+     "start_time": "2024-10-17T06:36:41.528320Z"
     }
    },
    "cell_type": "code",
@@ -208,13 +227,13 @@
    ],
    "id": "f80ecdf9f3f8f72b",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T07:01:03.840150Z",
-     "start_time": "2024-10-15T07:01:03.420353Z"
+     "end_time": "2024-10-17T06:36:41.903928Z",
+     "start_time": "2024-10-17T06:36:41.545335Z"
     }
    },
    "cell_type": "code",
@@ -462,15 +481,10 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 6
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T07:19:02.924182Z",
-     "start_time": "2024-10-15T07:19:02.909153Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from fta_web.alert.resources import MetricRecommendationResource\n",
@@ -531,15 +545,10 @@
    ],
    "id": "c4eb3705b8af08b",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 7
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-15T07:22:17.307638Z",
-     "start_time": "2024-10-15T07:22:17.280609Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import copy\n",
@@ -619,10 +628,15 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T06:36:43.231578Z",
+     "start_time": "2024-10-17T06:36:41.952536Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# 断点测试\n",
@@ -637,8 +651,22 @@
     "MetricRecommendationResource().perform_request(params)\n"
    ],
    "id": "79ada39d878b873f",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'alert_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[9], line 10\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mfta_web\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01malert\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mresources\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m MetricRecommendationResource\n\u001B[0;32m      4\u001B[0m params \u001B[38;5;241m=\u001B[39m {\n\u001B[0;32m      5\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mbk_biz_id\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;241m2\u001B[39m,\n\u001B[0;32m      6\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124malert_metric_id\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;241m2\u001B[39m,\n\u001B[0;32m      7\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrecommendation_metric_id\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;241m2\u001B[39m\n\u001B[0;32m      8\u001B[0m }\n\u001B[1;32m---> 10\u001B[0m \u001B[43mMetricRecommendationResource\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mperform_request\u001B[49m\u001B[43m(\u001B[49m\u001B[43mparams\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mD:\\PythonProjects\\bk-monitor\\bkmonitor\\packages\\fta_web\\alert\\resources.py:2241\u001B[0m, in \u001B[0;36mMetricRecommendationResource.perform_request\u001B[1;34m(self, validated_request_data)\u001B[0m\n\u001B[0;32m   2240\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mperform_request\u001B[39m(\u001B[38;5;28mself\u001B[39m, validated_request_data):\n\u001B[1;32m-> 2241\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43msuper\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mMetricRecommendationResource\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mperform_request\u001B[49m\u001B[43m(\u001B[49m\u001B[43mvalidated_request_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   2243\u001B[0m     \u001B[38;5;66;03m# 参数列表,每个列表同位置的元素一一对应，共同组成一对查询参数\u001B[39;00m\n\u001B[0;32m   2244\u001B[0m     alert_metric_ids \u001B[38;5;241m=\u001B[39m []\n",
+      "File \u001B[1;32mD:\\PythonProjects\\bk-monitor\\bkmonitor\\packages\\fta_web\\alert\\resources.py:2194\u001B[0m, in \u001B[0;36mAIOpsBaseResource.perform_request\u001B[1;34m(self, validated_request_data)\u001B[0m\n\u001B[0;32m   2193\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mperform_request\u001B[39m(\u001B[38;5;28mself\u001B[39m, validated_request_data):\n\u001B[1;32m-> 2194\u001B[0m     alert \u001B[38;5;241m=\u001B[39m AlertDocument\u001B[38;5;241m.\u001B[39mget(\u001B[43mvalidated_request_data\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43malert_id\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m)\n\u001B[0;32m   2195\u001B[0m     cache_result \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_cache_results(alert\u001B[38;5;241m.\u001B[39mid)\n\u001B[0;32m   2197\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m cache_result \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcache_valid(alert, cache_result):\n",
+      "\u001B[1;31mKeyError\u001B[0m: 'alert_id'"
+     ]
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
